--- a/app.css
+++ b/app.css
@@ -47,6 +47,13 @@ select {
 
 body {
   border-top:5px solid maroon;
+  background: -moz-linear-gradient(top,  rgba(150,150,150,0.5) 0%, rgba(0,0,0,0) 50px); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(150,150,150,0.5)), color-stop(50px,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(150,150,150,0.5) 0%,rgba(0,0,0,0) 50px); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(150,150,150,0.5) 0%,rgba(0,0,0,0) 50px); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(150,150,150,0.5) 0%,rgba(0,0,0,0) 50px); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(150,150,150,0.5) 0%,rgba(0,0,0,0) 50px); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6ff4444', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 
 .errors {
@@ -63,3 +70,5 @@ body {
   top:0;
   right:0;
 }
+
+survey-editor-field, survey-editor-form, survey-editor-fields { display:block; }
